# conan-test

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
conan/: _clean_build_dir.bat  conan_create_package.bat  conan_install.bat  conanfile.py
conan/MathLibrary/: conan_create_package.bat  conan_install.bat  conanfile.py  conanfile_MathLibrary.py
src/ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.sln  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters
src/StaticMath/: StaticMath.sln  StaticMath.vcxproj  StaticMath.vcxproj.filters  build.bat  build.debug.bat  build.release.bat  clean_all.bat
src/StaticMath/MathClient/: CMakeLists.txt  MathClient.cpp  MathClient.vcxproj  conanfile.py
src/StaticMath/MathLibrary/: CMakeLists.txt  MathLibrary.vcxproj  conanfile.py
src/StaticMath/Printings/: CMakeLists.txt  Printings.cpp  Printings.h  Printings.vcxproj  Printings.vcxproj.filters  conanfile.py
src/StaticMath/lib/: MathLibrary.cpp
